# lightning_processor

./: .gitignore  Cargo.toml  LICENSE  cargo.toml  clippy.toml  firmware.hex  license  readme.md  rustc-ice-2024-06-08T18_52_47-5964.txt  rustc-ice-2024-06-08T18_52_49-15272.txt  rustc-ice-2024-06-08T18_53_08-12668.txt  rustc-ice-2024-06-08T18_54_04-2456.txt  rustc-ice-2024-06-08T18_54_10-9612.txt  rustc-ice-2024-06-08T18_54_12-7356.txt  rustc-ice-2024-06-08T18_54_28-13264.txt  rustc-ice-2024-06-08T18_54_30-11428.txt  rustc-ice-2024-06-08T18_54_32-2420.txt  rustc-ice-2024-06-08T19_00_04-21460.txt  rustc-ice-2024-06-08T19_00_09-15796.txt  rustc-ice-2024-06-08T19_00_15-5176.txt  rustc-ice-2024-06-08T19_01_38-3272.txt  rustc-ice-2024-06-08T19_01_48-10488.txt  rustc-ice-2024-06-08T19_01_57-22260.txt  rustc-ice-2024-06-08T19_01_59-21816.txt  rustc-ice-2024-06-08T19_02_02-20792.txt  rustc-ice-2024-06-08T19_02_05-22000.txt  rustc-ice-2024-06-08T19_02_07-21584.txt  rustc-ice-2024-06-08T19_04_26-22244.txt  rustc-ice-2024-06-08T19_04_30-21900.txt  rustc-ice-2024-06-08T19_04_34-8000.txt  rustc-ice-2024-06-08T19_04_38-20812.txt  rustc-ice-2024-06-08T19_04_43-22320.txt  rustc-ice-2024-06-08T19_04_57-22084.txt  rustc-ice-2024-06-08T19_05_04-22400.txt  rustc-ice-2024-06-08T19_05_05-22460.txt  rustc-ice-2024-06-08T19_05_08-11784.txt  rustc-ice-2024-06-08T19_05_10-20588.txt  script.xnq  setup.py
src/emulator/: Cargo.toml  lib.rs  memory.rs  package-lock.json  package.json  readme.md
src/emulator/examples/: scratch.rs
src/emulator/processor/: processor.rs
src/emulator/src/: app.html  (+10 more)
(+329 files in other folders)
