[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox-ui = "0.25.1"
atln-processor = {path="../processor"}
winit = "0.30.3"
softbuffer = "0.4.4"

[dependencies.windows]
version = "0.57.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm"
]
